test/testPrint/print4.out
print4.rask:3:5: error: function print(int, int) not found

